2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (GetConstructors): Throw if
	TypeBuilder is incomplete.

2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (DefineMethodOverride): Throw if
	method body doesn't belong to the TypeBuilder.

2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (GetInterfaces): Return the expanded
	interface list if the type has been created.

2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (GetGenericArguments): Returns null for
	 non generic TypeBuilders.

2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (GenericParameterAttributes): Return none.

2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (GetElementType): Throw always.

2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (GetGenericTypeDefinition): Either
	throw or return itself.

2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (GenericParameterPosition): Return 0
	instead of throwing.

2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (DeclaringMethod): Return null
	instead of throwing.

2009-07-28 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (CreateType): Throw if concrete
	type has abstract method.

2009-07-28 Rodrigo Kumpera  <rkumpera@novell.com>

	* GenericTypeParameterBuilder.cs: SetBaseTypeConstraint with
	null argument is the same as passing typeof (object).

2009-07-28 Rodrigo Kumpera  <rkumpera@novell.com>

	* DerivedTypes.cs (ArrayType): Special case vector arrays using zero
	 as rank. This is required because we need to make the distinction
	between a vector and a one dimension SZARRAY.

	* EnumBuilder.cs: Create vectors as rank-zero ArrayType objects.

 	* TypeBuilder.cs: Same.

	* GenericTypeParameterBuilder.cs: Same.

2009-07-28 Rodrigo Kumpera  <rkumpera@novell.com>

	DerivedTypes.cs: ByRef and Pointer types return Array as base
	type.
