@@ -1,5 +1,9 @@
 2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>
 
+	* TypeBuilderTest: Test for GetNestedType.
+
+2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>
+
 	* TypeBuilderTest: Test for GetConstructors.
 
 2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>
